--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -4,7 +4,7 @@
             <%= currentUser.dataValues.username %>
         </h4>
     </li>
-    <li><a class="tooltipped" data-position="right" data-tooltip="Monthly Overview" href="/user">Calendar</a></li>
-    <li><a class="tooltipped" data-position="right" data-tooltip="Data Summary" href="/user/summary">Overview</a></li>
-    <li><a class="tooltipped" data-position="right" data-tooltip="Medical Advice" href="/user/advice">Advice</a></li>
+    <li class="nav"><a class="tooltipped" data-position="right" data-tooltip="Monthly Overview" href="/user">CALENDAR</a></li>
+    <li class="nav"><a class="tooltipped" data-position="right" data-tooltip="Data Summary" href="/user/summary">OVERVIEW</a></li>
+    <li class="nav"><a class="tooltipped" data-position="right" data-tooltip="Medical Advice" href="/user/advice">ADVICE</a></li>
 </ul>
