--- a/views/user/showDay.ejs
+++ b/views/user/showDay.ejs
@@ -6,78 +6,79 @@
         <h2 id='showDay'>
             <%= month.name %>
                 <%= day.num %>
+                    <span>
+                        <% if (dayOf) { %>
+                            <h3 style="display: inline;">: Day
+                                <%= dayOf %> of period</h3>
+                            <% } %>
+                    </span>
         </h2>
     </div>
-
-    <% if (dayOf) { %>
-        <h4>Day
-            <%= dayOf %> of period</h4>
-        <% } %>
-            <div class="day-body">
-                <span id="add"><a class="new" href="/user/<%= month.num%>/<%=day.num%>/new"><i class="fas fa-plus fa-2x"></i></a></span>
-                <section>
-                    <% if (symptoms) { %>
-                        <h4 class='notes'>Symptoms: </h4>
-                        <hr>
-                        <% if (symptoms.length > 0) { %>
-                            <div class="row">
-                                <% symptoms.forEach(symptom => { %>
-                                    <div class="col s12 ">
-                                        <div class="card" id="symptom">
-                                            <h5>
-                                                <%= symptom.type.slice(0,1).toUpperCase() + symptom.type.slice(1,symptom.type.length) %>
-                                            </h5>
-                                            <div class="symptom-severity">
-                                                <% for( let i = 1; i <= symptom.severity; i++ ) { %>
-                                                    <i class="fas fa-square" id="filled"></i>
-                                                    <% } %>
-                                                        <% if (symptom.severity < 5) { %>
-                                                            <% for( let i = symptom.severity; i < 5; i++ ) { %>
-                                                                <i class="fas fa-square" id="empty"></i>
-                                                                <% } %>
-                                                                    <% } %>
-                                            </div>
-                                        </div>
+    <div class="day-body">
+        <span id="add"><a class="new" href="/user/<%= month.num%>/<%=day.num%>/new"><i class="fas fa-plus fa-2x"></i></a></span>
+        <section>
+            <% if (symptoms) { %>
+                <h4 class='notes'>Symptoms: </h4>
+                <hr>
+                <% if (symptoms.length > 0) { %>
+                    <div class="row">
+                        <% symptoms.forEach(symptom => { %>
+                            <div class="col s12 ">
+                                <div class="card" id="symptom">
+                                    <h5>
+                                        <%= symptom.type.slice(0,1).toUpperCase() + symptom.type.slice(1,symptom.type.length) %>
+                                    </h5>
+                                    <div class="symptom-severity">
+                                        <% for( let i = 1; i <= symptom.severity; i++ ) { %>
+                                            <i class="fas fa-square" id="filled"></i>
+                                            <% } %>
+                                                <% if (symptom.severity < 5) { %>
+                                                    <% for( let i = symptom.severity; i < 5; i++ ) { %>
+                                                        <i class="fas fa-square" id="empty"></i>
+                                                        <% } %>
+                                                            <% } %>
                                     </div>
-                                    <% }) %>
+                                </div>
                             </div>
-                            <% } %>
-                                <% } %>
-                </section>
-                <section>
-                    <h4 class='notes'>Notes: </h4>
-                    <hr>
-                    <% if (notes.length > 0) { %>
-                        <div class="row">
-                            <% notes.forEach(note => { %>
-                                <div class="col s12 m6 l4">
-                                    <div class="card">
-                                        <div class="card-content">
-                                            <p class="card-title">
-                                                <%= note.title %><span><a class="new modal-trigger" href="#edit-note"><i class="fas fa-pen fa-xs"></i></a></span></p>
-                                            <div class="card-body">
-                                                <p>
-                                                    <%= note.content %>
-                                                </p>
-                                            </div>
-                                        </div>
+                            <% }) %>
+                    </div>
+                    <% } %>
+                        <% } %>
+        </section>
+        <section>
+            <h4 class='notes'>Notes: </h4>
+            <hr>
+            <% if (notes.length > 0) { %>
+                <div class="row">
+                    <% notes.forEach(note => { %>
+                        <div class="col s12 m6 l4">
+                            <div class="card">
+                                <div class="card-content">
+                                    <p class="card-title">
+                                        <%= note.title %><span><a class="new modal-trigger" href="#edit-note"><i class="fas fa-pen fa-xs"></i></a></span></p>
+                                    <div class="card-body">
+                                        <p>
+                                            <%= note.content %>
+                                        </p>
                                     </div>
+                                </div>
+                            </div>
 
 
-                                    <div id="edit-note" class="modal">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="signupLabel">Edit Note:
-                                                <span class="modal-close">&times;</span> </h5>
+                            <div id="edit-note" class="modal">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="signupLabel">Edit Note:
+                                        <span class="modal-close">&times;</span> </h5>
+                                </div>
+                                <form action="/user/<%=month.num%>/<%=day.num%>/<%= note.id %>/note?_method=PUT" method="POST">
+                                    <div class=" modal-content ">
+                                        <div class="input-field ">
+                                            <label for="title">Title</label>
+                                            <input type="text" name="title" id="title" value="<%= note.title %> " required>
                                         </div>
-                                        <form action="/user/<%=month.num%>/<%=day.num%>/<%= note.id %>/note?_method=PUT" method="POST">
-                                            <div class=" modal-content ">
-                                                <div class="input-field ">
-                                                    <label for="title">Title</label>
-                                                    <input type="text" name="title" id="title" value="<%= note.title %> " required>
-                                                </div>
-                                                <div class="input-field ">
-                                                    <label for="content">Content</label>
-                                                    <textarea name="content" id="content" class="materialize-textarea"><%= note.content %> </textarea required>
+                                        <div class="input-field ">
+                                            <label for="content">Content</label>
+                                            <textarea name="content" id="content" class="materialize-textarea"><%= note.content %> </textarea required>
                                                 </div>
                                                 <div class="input-field ">
                                                     <input type="hidden" name="id" value="<%= note.id %>">
