--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -1,38 +1,41 @@
 <main class="userhome">
-    <h2>
-        <%=month.name%>
-    </h2>
-    <%  if(dayOf){ %>
-        <h4>Day
-            <%= dayOf %> of Period
-        </h4>
-        <% } else if (predictedStart){ %>
-            <h4>Period Starts
-                <%= predictedStart %>
+    <div class="month-header">
+        <h2>
+            <%=month.name%>
+        </h2>
+        <%  if(dayOf){ %>
+            <h4>
+                <%= [new Date().getMonth()+1, new Date().getDate(), new Date().getFullYear()].join('/') %>: Day
+                    <%= dayOf %> of Period
             </h4>
-            <% } %>
-                <div class="arrows">
-                    <a href="/user/<%= month.previousMonth %>"><i class="fas fa-chevron-left"></i></a><span><a href="/user/<%= month.nextMonth %>"><i class="fas fa-chevron-right"></i></a></span>
+            <% } else if (predictedStart && (new Date().getMonth()+1) === parseInt(month.num)){ %>
+                <h4>Period Starts
+                    <%= predictedStart %>
+                </h4>
+                <% } %>
+    </div>
+    <div class="arrows">
+        <a href="/user/<%= month.previousMonth %>"><i class="fas fa-chevron-left"></i></a><span><a href="/user/<%= month.nextMonth %>"><i class="fas fa-chevron-right"></i></a></span>
+    </div>
+    <div class="calendar">
+        <% monthData.forEach(day => { %>
+            <a href="/user/<%=month.num%>/<%=day.day%>">
+                <div class="day">
+                    <button id="selectDay"><%= day.day%></button>
+                    <% if (day.notes.length > 0){ %>
+                        <i class="far fa-sticky-note fa-lg"></i>
+                        <% } %>
+                            <% if  (day.symptoms.length > 0){ %>
+                                <i class="fas fa-angle-double-up fa-lg"></i>
+                                <% } %>
+                                    <% if  (day.activities.length > 0){ %>
+                                        <i class="far fa-star fa-lg"></i>
+                                        <% } %>
+                                            <% if (day.period) { %>
+                                                <i class="far fa-moon fa-lg"></i>
+                                                <% } %>
                 </div>
-                <div class="calendar">
-                    <% monthData.forEach(day => { %>
-                        <a href="/user/<%=month.num%>/<%=day.day%>">
-                            <div class="day">
-                                <button id="selectDay"><%= day.day%></button>
-                                <% if (day.notes.length > 0){ %>
-                                    <i class="far fa-sticky-note fa-lg"></i>
-                                    <% } %>
-                                        <% if  (day.symptoms.length > 0){ %>
-                                            <i class="fas fa-angle-double-up fa-lg"></i>
-                                            <% } %>
-                                                <% if  (day.activities.length > 0){ %>
-                                                    <i class="far fa-star fa-lg"></i>
-                                                    <% } %>
-                                                        <% if (day.period) { %>
-                                                            <i class="far fa-moon fa-lg"></i>
-                                                            <% } %>
-                            </div>
-                        </a>
-                        <% }) %>
-                </div>
+            </a>
+            <% }) %>
+    </div>
 </main>
