--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,26 @@
 <main id='landing'>
     <h2>Welcome to Tracker</h2>
+    <a href="#start" class="modal-trigger">Get started with Tracker</a>
 </main>
+
+
+
+
+<div id="start" class="modal">
+    <div class="modal-header">
+        <h5 class="modal-title" id="signupLabel">Getting Started
+            <span class="modal-close">&times;</span> </h5>
+    </div>
+    <div class="modal-content">
+        <p>Tracker is intended to be a neutral period tracker that takes the focus away from pregnancy and allows you to record your own priorities.<br/><br/>After signing up for tracker, click on days in the calendar and add information using the
+            <span style="color:rgb(11, 161, 163)">"+"</span> button. To begin tracking a period, open the <span style="color:rgb(11, 161, 163)">Period</span> section on the Edit page. Check back in to Tracker to add notes and symptoms, or just to mark
+            the end of the period and check your future start date.
+        </p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="modal-close btn btn-secondary">CLOSE</button>
+    </div>
+</div>
 
 
 <div id="signup" class="modal">
