--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,52 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta property="og:image" content="./imgs/landing.png" />
+        <meta
+            property="og:description"
+            content="A gender neutral, user driven period tracker app"
+        />
+        <title>Tracker</title>
+        <!-- Materialize CSS -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+        />
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tracker</title>
-    <!-- Materialize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="/css/style.css" />
+    </head>
 
-    <link rel="stylesheet" href="/css/style.css">
-
-</head>
-
-<body>
-    <header>
-
-        <nav>
-            <div class="nav-wrapper">
-                <% if(!currentUser) { %>
-                    <a href='/' class="brand-logo">Tracker App</a>
+    <body>
+        <header>
+            <nav>
+                <div class="nav-wrapper">
+                    <% if(!currentUser) { %>
+                    <a href="/" class="brand-logo">Tracker App</a>
                     <% } else { %>
-                        <a href='/user/<%= (new Date().getMonth() + 1) %>' class="brand-logo">Tracker App</a>
+                    <a
+                        href="/user/<%= (new Date().getMonth() + 1) %>"
+                        class="brand-logo"
+                        >Tracker App</a
+                    >
+                    <% } %>
+                    <ul id="nav-mobile" class="right">
+                        <% if (!currentUser) { %>
+                        <li>
+                            <a class="modal-trigger" href="#signup">Signup</a>
+                        </li>
+                        <li>
+                            <a class="modal-trigger" href="#login">Login</a>
+                        </li>
+                        <% } else { %>
+                        <li>
+                            <a
+                                href="#"
+                                data-target="slide-out"
+                                class="sidenav-trigger"
+                                ><i class="fas fa-bars"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="/auth/logout">Logout</a>
+                        </li>
                         <% } %>
-                            <ul id="nav-mobile" class="right">
-                                <% if (!currentUser) { %>
-                                    <li><a class="modal-trigger" href="#signup">Signup</a> </li>
-                                    <li><a class="modal-trigger" href="#login">Login</a></li>
-                                    <% } else { %>
-                                        <li>
-                                            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
-                                        </li>
-                                        <li>
-                                            <a href="/auth/logout">Logout</a>
-                                        </li>
-                                        <% } %>
-                            </ul>
-            </div>
-        </nav>
-    </header>
-    <% if (currentUser) { %>
-        <%- include('partials/sidenav') %>
-            <% } %>
-                <%- include('partials/alerts') %>
-                    <%- body %>
-                        <script src="https://kit.fontawesome.com/3c951815da.js" crossorigin="anonymous"></script>
-                        <!-- Materialize JavaScript -->
-                        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-                        <script src="/js/app.js" type='text/javascript'></script>
-</body>
-
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <% if (currentUser) { %> <%- include('partials/sidenav') %> <% } %> <%-
+        include('partials/alerts') %> <%- body %>
+        <script
+            src="https://kit.fontawesome.com/3c951815da.js"
+            crossorigin="anonymous"
+        ></script>
+        <!-- Materialize JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="/js/app.js" type="text/javascript"></script>
+    </body>
 </html>
