--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,8 +7,13 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:image" content="../imgs/landing.png" />
         <meta
+            prefix="og: http://ogp.me/ns#"
+            property="og:image"
+            content="../imgs/landing.png"
+        />
+        <meta
+            prefix="og: http://ogp.me/ns#"
             property="og:description"
             content="A gender neutral, user driven period tracker app"
         />
