--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,7 +7,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="image" property="og:image" content="../imgs/landing.png" />
+        <meta
+            name="image"
+            property="og:image"
+            content="http://periodtrackerapp.herokuapp/landing.png"
+        />
         <meta
             name="description"
             property="og:description"
@@ -63,6 +67,7 @@
         </header>
         <% if (currentUser) { %> <%- include('partials/sidenav') %> <% } %> <%-
         include('partials/alerts') %> <%- body %>
+
         <script
             src="https://kit.fontawesome.com/3c951815da.js"
             crossorigin="anonymous"
