--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,6 +12,7 @@
             property="og:image"
             content="http://periodtrackerapp.herokuapp/landing.png"
         />
+        <meta property="og:type" content="website" />
         <meta
             name="description"
             property="og:description"
