--- a/views/user/summary.ejs
+++ b/views/user/summary.ejs
@@ -1,15 +1,15 @@
 <main class='advice'>
     <h3>Summary</h3>
     <section class="data-search">
-        <h5>Cycle Data</h5>
+        <h5>Cycle Data  <span><a class=" tooltipped" data-position="right" data-tooltip="Please note, cycle data inaccuracy propagated from a mathematical error moving into 2021.  This is being addressed."><i class="fas fa-info-circle fa-xs"></i></a></span></h5>
         <p><i class="far fa-clock fa-sm"></i> Average cycle length:
-            <%= user.avgCycle %> Days</p>
+            <%= user.avgCycle %> Days </p>
         <p><i class="far fa-clock fa-sm"></i> Average period length:
             <%= user.avgPeriod %> Days</p>
 
     </section>
     <section class="data-search">
-        <h5>My Medications <a class=" tooltipped" data-position="right" data-tooltip="To add a medication, search by name in Advice"><i class="fas fa-info-circle fa-xs"></i></a></span>
+        <h5>My Medications <span><a class=" tooltipped" data-position="right" data-tooltip="To add a medication, search by name in Advice"><i class="fas fa-info-circle fa-xs"></i></a></span>
         </h5>
         <ul>
             <% for( let i = 0; i < meds.length; i++ ) { %>
