add tool tip to medication

--- a/views/user/advice.ejs
+++ b/views/user/advice.ejs
@@ -2,7 +2,7 @@
     <h3>Medical Advice</h3>
 
     <section id="drug-search">
-        <h5>Active Ingredient Search</h5>
+        <h5>Active Ingredient Search<span><a class="tooltipped" data-position="right" data-tooltip="Search medication by name. Please be patient, the third party database takes a moment to search."><i class="fas fa-info-circle fa-xs"></i></a></span></h5>
         <p>Find out what's in what you're taking</p>
         <form action="/user/advice/results" method="GET">
             <div class="input-field">
